--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 292,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 295,
    "metadata": {
     "scrolled": false
    },
@@ -271,7 +271,7 @@
        " 'j': 42}"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "42"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "(64148,)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "       19,  3])"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 301,
    "metadata": {
     "scrolled": true
    },
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 303,
    "metadata": {
     "scrolled": true
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 306,
    "metadata": {
     "scrolled": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "<MapDataset element_spec=(TensorSpec(shape=(32, None), dtype=tf.int32, name=None), TensorSpec(shape=(32, None), dtype=tf.int32, name=None))>"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -1015,22 +1015,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".   g i u e   y o u   g o o d   n i g h t \n",
+      "  p o l l a x   o n   t h e   i c e . \n",
+      " ' t i s   s t r a n g e \n",
       " \n",
-      "   m a r .   o   f a r w e l   h o n e s t   s o l d i e r ,   w h o   h a t h   r e l i e u ' d   y o u ? \n",
-      " f r a .   b a r n a r d o   h a ' s   m y   p\n",
+      "   m a r .   t h u s   t w i c e   b e f o r e ,   a n d   i u s t   a t   t h i s   d e a d   h o u r e , \n",
+      " w i t h   m a r t i a l\n",
       "\n",
-      "  g i u e   y o u   g o o d   n i g h t \n",
+      "p o l l a x   o n   t h e   i c e . \n",
+      " ' t i s   s t r a n g e \n",
       " \n",
-      "   m a r .   o   f a r w e l   h o n e s t   s o l d i e r ,   w h o   h a t h   r e l i e u ' d   y o u ? \n",
-      " f r a .   b a r n a r d o   h a ' s   m y   p l\n"
+      "   m a r .   t h u s   t w i c e   b e f o r e ,   a n d   i u s t   a t   t h i s   d e a d   h o u r e , \n",
+      " w i t h   m a r t i a l l\n"
      ]
     }
    ],
@@ -1047,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,16 +1059,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\".   g i u e   y o u   g o o d   n i g h t     m a r .   o   f a r w e l   h o n e s t   s o l d i e r ,   w h o   h a t h   r e l i e u ' d   y o u ?  f r a .   b a r n a r d o   h a ' s   m y   p\""
+       "\"  p o l l a x   o n   t h e   i c e .  ' t i s   s t r a n g e     m a r .   t h u s   t w i c e   b e f o r e ,   a n d   i u s t   a t   t h i s   d e a d   h o u r e ,  w i t h   m a r t i a l\""
       ]
      },
-     "execution_count": 230,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,16 +1079,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"  g i u e   y o u   g o o d   n i g h t     m a r .   o   f a r w e l   h o n e s t   s o l d i e r ,   w h o   h a t h   r e l i e u ' d   y o u ?  f r a .   b a r n a r d o   h a ' s   m y   p l\""
+       "\"p o l l a x   o n   t h e   i c e .  ' t i s   s t r a n g e     m a r .   t h u s   t w i c e   b e f o r e ,   a n d   i u s t   a t   t h i s   d e a d   h o u r e ,  w i t h   m a r t i a l l\""
       ]
      },
-     "execution_count": 231,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 100, 42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for X_batch, Y_batch in hamlet_dataset.take(1):\n",
+    "    print(X_batch.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1168,7 @@
        "<MapDataset element_spec=(TensorSpec(shape=(32, None, 42), dtype=tf.float32, name=None), TensorSpec(shape=(32, None), dtype=tf.int32, name=None))>"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,12 +1188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CODE\n",
     "hamlet_dataset = hamlet_dataset.prefetch(buffer_size = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PrefetchDataset element_spec=(TensorSpec(shape=(32, None, 42), dtype=tf.float32, name=None), TensorSpec(shape=(32, None), dtype=tf.int32, name=None))>"
+      ]
+     },
+     "execution_count": 325,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamlet_dataset"
    ]
   },
   {
@@ -1437,6 +1477,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " gru_4 (GRU)                 (None, None, 128)         66048     \n",
+      "                                                                 \n",
+      " gru_5 (GRU)                 (None, None, 128)         99072     \n",
+      "                                                                 \n",
+      " time_distributed_2 (TimeDis  (None, None, 42)         5418      \n",
+      " tributed)                                                       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 170,538\n",
+      "Trainable params: 170,538\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1451,11 +1523,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE"
+    "# YOUR CODE\n",
+    "def preprocess(texts):\n",
+    "#     x = np.squeeze(np.array(tokenizer.texts_to_sequences(texts)) - 1)\n",
+    "#     dataset_text = tf.data.Dataset.from_tensor_slices(x)\n",
+    "    x = np.array(tokenizer.texts_to_sequences(texts)) - 1\n",
+    "    one_hot_x= tf.one_hot(x, max_id)\n",
+    "#     one_hot_x = one_hot_x\n",
+    "    return one_hot_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(6, 1, 42), dtype=float32, numpy=\n",
+       "array([[[0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocess('Hamlet')"
    ]
   },
   {
@@ -1485,13 +1607,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_char(text, temperature=1):\n",
-    "    X_new = None\n",
-    "    y_proba = None\n",
+    "    X_new = preprocess(text)\n",
+    "    y_proba = model.predict(X_new)[0,-1:,:]\n",
     "    rescaled_logits = tf.math.log(y_proba) / temperature\n",
     "    char_id = tf.random.categorical(rescaled_logits, num_samples=1) + 1\n",
     "    return tokenizer.sequences_to_texts(char_id.numpy())[0]"
@@ -1510,13 +1632,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
     "def complete_text(text, n_chars=50, temperature=1):\n",
     "    for _ in range(n_chars):\n",
-    "        text += None\n",
+    "        text += next_char(text, temperature)\n",
     "    return text"
    ]
   },
@@ -1541,11 +1663,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 335,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 342ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "2/2 [==============================] - 0s 4ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 4ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 4ms/step\n",
+      "2/2 [==============================] - 0s 4ms/step\n",
+      "2/2 [==============================] - 0s 3ms/step\n",
+      "2/2 [==============================] - 0s 8ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "2/2 [==============================] - 0s 6ms/step\n",
+      "Hamletoaeeeteeiie eeie aoi oo.oeeaeyattoeeeeeeeoeeieeeia\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE"
+    "# YOUR CODE\n",
+    "output = []\n",
+    "for i in np.arange(0.1,2.1,0.1):\n",
+    "    output.append(complete_text(\"Hamlet\",1000,i))\n",
+    "\n",
+    "with open(\"output.txt\", \"w+\") as f:\n",
+    "    for idx,i in enumerate(output)\n",
+    "    f.write(f\"For {idx}\\n\\n{i}\\n\\n\")\n",
+    "    "
    ]
   },
   {
